--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+      <provider
+          android:name="android.support.v4.content.FileProvider"
+          android:authorities="com.example.android.senseit.fileprovider"
+          android:grantUriPermissions="true"
+          android:exported="false"
+          >
+          <meta-data
+              android:name="android.support.FILE_PROVIDER_PATHS"
+              android:resource="@xml/provider_paths"
+              ></meta-data>
+
+      </provider>
+
     </application>
 
 </manifest>
